fix: remove Stream::toList (Java 16)